# ImguiPractice

./: .gitignore  CMakeLists.txt  device_and_swap_chain_util.cpp  device_and_swap_chain_util.h  main.cpp  render.h  start.cpp
JSONTest/: test.json  test1.json  test2.json  test3.json
components/: ButtonGroup.cpp  ButtonGroup.h  ComponentUtils.cpp  ComponentUtils.h  D3D11_BLEND_COMBO.cpp  D3D11_BLEND_COMBO.h  D3D11_BLEND_OP_COMBO.cpp  D3D11_BLEND_OP_COMBO.h  RenderTargetGroup.cpp  RenderTargetGroup.h
main/: D3DApp.cpp  D3DApp.h  DisplayApp.cpp  DisplayApp.h
test/: inCerealTest.cpp  outCerealTest.cpp
triangle/: Triangle.cpp  Triangle.h
utils/: D3D11StructureSerialize.h  HLSLCompile.h  JSONSerializer.h  OpenJSONFile.cpp  OpenJSONFile.h  device_and_swap_chain_util.h
windows/: BLEND_DESC_Struct.cpp  BLEND_DESC_Struct.h  MainWindow.cpp  MainWindow.h
