cmake_minimum_required(VERSION 3.22)
project(ImguiPractice)
file(GLOB_RECURSE IMGUI ${PROJECT_SOURCE_DIR}/imgui/*.cpp)
file(GLOB_RECURSE BACKEND ${PROJECT_SOURCE_DIR}/backend/*.cpp)
file(GLOB_RECURSE UTILS ${PROJECT_SOURCE_DIR}/utils/*.cpp)
file(GLOB_RECURSE WINDOWS ${PROJECT_SOURCE_DIR}/windows/*.cpp)
file(GLOB_RECURSE COMPONENTS ${PROJECT_SOURCE_DIR}/components/*.cpp)
file(GLOB_RECURSE D3D11StructureArchiveProxy ${PROJECT_SOURCE_DIR}/D3D11StructureArchiveProxy/*.cpp)
set(CMAKE_CXX_STANDARD 14)
include_directories(${PROJECT_SOURCE_DIR}/imgui)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(ImguiPractice main.cpp device_and_swap_chain_util.cpp ${IMGUI} ${BACKEND} ${UTILS} ${WINDOWS} ${COMPONENTS} ${D3D11StructureArchiveProxy})
add_executable(outTestCereal test/outCerealTest.cpp)
add_executable(inTestCereal test/inCerealTest.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE d3d11.lib)
